--- a/Public/css/Login.css
+++ b/Public/css/Login.css
@@ -1,5 +1,20 @@
+div .login{
+    border-radius: 15px;
+    background-color: #0b1a2a;
+}
+div h4 {
+  color: white;
+  font-size: 40px;
+}
+div label 
+{
+  color: white;
+}
+
+
 body {
     padding-top: 90px;
+    background: #4a4a4f;
 }
 .panel-login {
 	border-color: #ccc;
