--- a/Public/css/Registro.css
+++ b/Public/css/Registro.css
@@ -1,3 +1,18 @@
+div .registrar{
+    border-radius: 8px;
+    background-color: #0b1a2a;
+}
+div h3 {
+  color: white;
+  font-size: 40px;
+}
+div h6
+{
+  color: white;
+}
+
+
+
 body{
     background-color: #525252;
 }
@@ -9,3 +24,4 @@ body{
 	background: rgba(255, 255, 255, 0.8);
 	box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
 }
+
